--- a/app/src/main/res/layout/fragment_product_info.xml
+++ b/app/src/main/res/layout/fragment_product_info.xml
@@ -161,7 +161,8 @@
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_title"
-                android:isIndicator="true"/>
+                android:isIndicator="true"
+                android:progressTint="#FFD700" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
@@ -243,7 +244,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_reviewDesc" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_reviewDesc"
+                    android:progressTint="#FFD700" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -290,7 +292,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_reviewDesc2" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_reviewDesc2"
+                    android:progressTint="#FFD700" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
