--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,11 +14,10 @@
 
 
 
-    
+
 
     <item
-        android:id="@+id/setting"
-
+        android:id="@+id/navigation_setting"
         android:icon="@drawable/setting"
         android:title="@string/setting" />
 
